--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,12 @@ authors = ["Abdul <abdul@abdulhani.com>"]
 license = "GPL v3"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<3.11"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
 isort = "^5.10.1"
+pyinstaller = "^5.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
