Added argument parser

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 ###########  FILES  ############
 ################################
 *.exe
+devstore.sqlite
 
 ################################
 ########### FOLDERS ############
 ################################
+sqlitestudio-3.3.3
 build/
 html/
 .benchmarks/
