--- a/.gitignore
+++ b/.gitignore
@@ -1,134 +1,135 @@
-################################
-###########  FILES  ############
-################################
-*.exe
-devstore.sqlite
+# File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
+# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,c,c++
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,c,c++
 
-################################
-########### FOLDERS ############
-################################
-sqlitestudio-3.3.3
-build/
-html/
-.benchmarks/
-reports/
-lectures/
+### C ###
+# Prerequisites
+*.d
 
-################################
-########### PYTHON #############
-################################
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
 
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# Linker output
+*.ilk
+*.map
+*.exp
 
-# C extensions
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
 *.so
+*.so.*
+*.dylib
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
+### C++ ###
+# Prerequisites
 
-# Translations
-*.mo
-*.pot
+# Compiled Object files
+*.slo
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
+# Precompiled Headers
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Compiled Dynamic libraries
 
-# Scrapy stuff:
-.scrapy
+# Fortran module files
+*.mod
+*.smod
 
-# Sphinx documentation
-docs/build/
+# Compiled Static libraries
+*.lai
 
-# PyBuilder
-target/
+# Executables
 
-# Jupyter Notebook
-.ipynb_checkpoints
+### VisualStudioCode ###
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-# pyenv
-.python-version
+# Local History for Visual Studio Code
+.history/
 
-# celery beat schedule file
-celerybeat-schedule
+# Built Visual Studio Code Extensions
+*.vsix
 
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.mypy_cache*
-
-*.isorted
-
-################################
-########### VS CODE ############
-################################
-.vscode
-*.code-workspace
+### VisualStudioCode Patch ###
+# Ignore all local history of files
 .history
+.ionide
+
+# Support for Project snippet scope
+.vscode/*.code-snippets
+
+# Ignore code-workspaces
+*.code-workspace
+
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,c,c++
+
+# Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+
+python/
+progrma.exe
+sqlitestudio-3.3.3/
