--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,5 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
-python/
-progrma.exe
-sqlitestudio-3.3.3/
+build/
+sqlitestudio-3.3.3
