--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,5 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 build/
+src/config.h
 sqlitestudio-3.3.3
