--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ dkms.conf
 # Executables
 
 ### CMake ###
+src/config.h
 build
 CMakeLists.txt.user
 CMakeCache.txt
@@ -535,3 +536,4 @@ FodyWeavers.xsd
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 sqlitestudio-3.3.3
+.venv
